--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,7 +1,7 @@
 $breakpoints-up: (
   "medium": "40em",
   "large": "64em",
-  "x-large": "87.5em",
+  "extra-large": "87.5em",
 );
 $breakpoints-down: (
   "small": "39.9375em",
